tests/outref/TCEF02_type_mismatch.ref
SELECT NULLIF(1, '1');
[ERROR] PATH:LINENUM DATE TIME : ERR_TYPE_MISMATCH : Type mismatch: left INTEGER, right VARCHAR
Error with syntax near (line 1, column 14):

SELECT NULLIF(1, '1');
              ^
Error with syntax near (line 1, column 19):

SELECT NULLIF(1, '1');
                   ^
NULLIF

(1 row)
